--- a/CAER/configs/config.json
+++ b/CAER/configs/config.json
@@ -5,7 +5,10 @@
     "type": "CAERSNet",
     "args": {
       "num_classes": 7,
-      "face_model_path": "/kaggle/working/FER_trained_model.pt"
+      "face_model_path": "/kaggle/working/FER_trained_model.pt",
+      "body_backbone": "swin_t",
+      "context_backbone": "resnet50",
+      "freeze_backbones": true
     }
   },
   "loss": "cross_entropy",
@@ -47,7 +50,7 @@
   "optimizer": {
     "type": "SGD",
     "args": {
-      "lr": 1e-2,
+      "lr": 5e-3,
       "momentum": 0.9,
       "nesterov": true
     }
