--- a/CAER/configs/config.json
+++ b/CAER/configs/config.json
@@ -6,7 +6,7 @@
     "args": {
       "num_classes": 7,
       "face_model_path": "/kaggle/working/FER_trained_model.pt",
-      "body_backbone": "swin_t",
+      "body_backbone": "resnet50",
       "context_backbone": "resnet50_places",
       "freeze_backbones": true,
       "attention": false
