--- a/CAER/configs/config.json
+++ b/CAER/configs/config.json
@@ -8,6 +8,9 @@
       "face_model_path": "/kaggle/working/FER_trained_model.pt",
       "body_backbone": "resnet50",
       "context_backbone": "resnet50_places",
+      "use_body": true,
+      "use_context": true,
+      "use_face": true,
       "freeze_backbones": true,
       "attention": true
     }
@@ -16,6 +19,7 @@
   "metrics": [
     "accuracy"
   ],
+
   "test_loader": {
     "type": "CAERSDataLoader",
     "args": {
@@ -71,5 +75,10 @@
     "monitor": "max val_accuracy",
     "early_stop": 5,
     "tensorboard": false
+  },
+  "grad_cam":{
+    "output_dir": "saved/grad_cam_output",
+    "taget_layers": "backbone.body_extractor.layer4",
+    "visualiza_on": "body"
   }
 }
